# printer_experiment

./: LICENSE.txt  README.md  example.env  gitignore.txt  pre-commit-config.yaml  pyproject.toml  ruff.toml
src/printer_experiment/: OT2_CADauto.py  camera_driver.py  click_finder.py  prusa_waterdrop_app.py
src/printer_experiment/protocols/: OT2_CADauto.py
src/printer_experiment/workflows/: autonomous_drop_workflow.yaml  prusa_waterdrop_app (1).py  prusa_waterdrop_app.py
